--- a/biome.json
+++ b/biome.json
@@ -35,7 +35,9 @@
       "lineWidth": 130,
       "arrowParentheses": "always",
       "bracketSpacing": true,
-      "jsxQuoteStyle": "double"
+      "jsxQuoteStyle": "double",
+      "indentWidth": 2,
+      "indentStyle": "space"
     }
   }
 }
