--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "npm run format && npm run lint:check && npm run lint:apply"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
