--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tabler/icons-react": "^3.19.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
-    "framer-motion": "^11.11.7",
+    "framer-motion": "^11.11.8",
     "i18next": "^23.15.2",
     "lucide-react": "^0.451.0",
     "react": "^18.3.1",
