--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^15.0.2",
     "react-icons": "^5.3.0",
+    "swiper": "^11.2.6",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.4.0"
